src/main/java/dfpp/ast/gen/DfppParser.java
package dfpp.ast.gen;// Generated from /Users/davidfranz/Documents/df++/dfpp/src/main/antlr/Dfpp.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DfppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, MODULE=2, IMPORT=3, AS=4, TYPE=5, FN=6, TASK=7, PRE=8, ACT=9, 
		POS=10, RUN=11, PARALLEL=12, MATCH=13, CONST=14, LET=15, MUT=16, TRUE=17, 
		FALSE=18, NULL=19, FOR=20, IN=21, IF=22, UNDERSCORE=23, INTLIT=24, DECLIT=25, 
		STRING=26, ID=27, BTICKID=28, LP=29, RP=30, LB=31, RB=32, LSB=33, RSB=34, 
		COMMA=35, DOT=36, COLON=37, EQ=38, QMARK=39, ARROW=40, PLUS=41, MINUS=42, 
		STAR=43, SLASH=44, PERC=45, AND=46, OR=47, NOT=48, EE=49, NE=50, LT=51, 
		LE=52, GT=53, GE=54, WS=55, LINE_COMMENT=56, BLOCK_COMMENT=57;
	public static final int
		RULE_program = 0, RULE_moduleDecl = 1, RULE_importDecl = 2, RULE_qid = 3, 
		RULE_ident = 4, RULE_topDecl = 5, RULE_constDecl = 6, RULE_letDecl = 7, 
		RULE_typeDecl = 8, RULE_typeParamsDecl = 9, RULE_typeParam = 10, RULE_sumType = 11, 
		RULE_variant = 12, RULE_fnDecl = 13, RULE_paramList = 14, RULE_param = 15, 
		RULE_taskDecl = 16, RULE_block = 17, RULE_stmt = 18, RULE_runStmt = 19, 
		RULE_parallelStmt = 20, RULE_stringList = 21, RULE_expr = 22, RULE_conditional = 23, 
		RULE_logicalOr = 24, RULE_logicalAnd = 25, RULE_equality = 26, RULE_relational = 27, 
		RULE_additive = 28, RULE_multiplicative = 29, RULE_unary = 30, RULE_postfix = 31, 
		RULE_postfixOp = 32, RULE_sliceSpec = 33, RULE_primary = 34, RULE_literal = 35, 
		RULE_args = 36, RULE_runCall = 37, RULE_matchExpr = 38, RULE_matchArm = 39, 
		RULE_pattern = 40, RULE_patField = 41, RULE_recordLit = 42, RULE_recField = 43, 
		RULE_arrayLit = 44, RULE_typeRef = 45, RULE_typeArgs = 46, RULE_typeField = 47, 
		RULE_lambdaExpr = 48, RULE_lambdaHead = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "moduleDecl", "importDecl", "qid", "ident", "topDecl", "constDecl", 
			"letDecl", "typeDecl", "typeParamsDecl", "typeParam", "sumType", "variant", 
			"fnDecl", "paramList", "param", "taskDecl", "block", "stmt", "runStmt", 
			"parallelStmt", "stringList", "expr", "conditional", "logicalOr", "logicalAnd", 
			"equality", "relational", "additive", "multiplicative", "unary", "postfix", 
			"postfixOp", "sliceSpec", "primary", "literal", "args", "runCall", "matchExpr", 
			"matchArm", "pattern", "patField", "recordLit", "recField", "arrayLit", 
			"typeRef", "typeArgs", "typeField", "lambdaExpr", "lambdaHead"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|'", "'module'", "'import'", "'as'", "'type'", "'fn'", "'task'", 
			"'pre'", "'act'", "'pos'", "'run'", "'parallel'", "'match'", "'const'", 
			"'let'", "'mut'", "'true'", "'false'", "'null'", "'for'", "'in'", "'if'", 
			"'_'", null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "','", "'.'", "':'", "'='", "'?'", "'->'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", "'<='", "'>'", 
			"'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "MODULE", "IMPORT", "AS", "TYPE", "FN", "TASK", "PRE", "ACT", 
			"POS", "RUN", "PARALLEL", "MATCH", "CONST", "LET", "MUT", "TRUE", "FALSE", 
			"NULL", "FOR", "IN", "IF", "UNDERSCORE", "INTLIT", "DECLIT", "STRING", 
			"ID", "BTICKID", "LP", "RP", "LB", "RB", "LSB", "RSB", "COMMA", "DOT", 
			"COLON", "EQ", "QMARK", "ARROW", "PLUS", "MINUS", "STAR", "SLASH", "PERC", 
			"AND", "OR", "NOT", "EE", "NE", "LT", "LE", "GT", "GE", "WS", "LINE_COMMENT", 
			"BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dfpp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DfppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DfppParser.EOF, 0); }
		public ModuleDeclContext moduleDecl() {
			return getRuleContext(ModuleDeclContext.class,0);
		}
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public List<TopDeclContext> topDecl() {
			return getRuleContexts(TopDeclContext.class);
		}
		public TopDeclContext topDecl(int i) {
			return getRuleContext(TopDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MODULE) {
				{
				setState(100);
				moduleDecl();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(103);
				importDecl();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 121056L) != 0)) {
				{
				{
				setState(109);
				topDecl();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(DfppParser.MODULE, 0); }
		public QidContext qid() {
			return getRuleContext(QidContext.class,0);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterModuleDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitModuleDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitModuleDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(MODULE);
			setState(118);
			qid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(DfppParser.IMPORT, 0); }
		public QidContext qid() {
			return getRuleContext(QidContext.class,0);
		}
		public TerminalNode AS() { return getToken(DfppParser.AS, 0); }
		public TerminalNode ID() { return getToken(DfppParser.ID, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitImportDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitImportDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(IMPORT);
			setState(121);
			qid();
			setState(122);
			match(AS);
			setState(123);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QidContext extends ParserRuleContext {
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(DfppParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(DfppParser.DOT, i);
		}
		public QidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterQid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitQid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitQid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QidContext qid() throws RecognitionException {
		QidContext _localctx = new QidContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qid);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			ident();
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126);
					match(DOT);
					setState(127);
					ident();
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DfppParser.ID, 0); }
		public TerminalNode BTICKID() { return getToken(DfppParser.BTICKID, 0); }
		public IdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterIdent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitIdent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitIdent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentContext ident() throws RecognitionException {
		IdentContext _localctx = new IdentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ident);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==BTICKID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopDeclContext extends ParserRuleContext {
		public ConstDeclContext constDecl() {
			return getRuleContext(ConstDeclContext.class,0);
		}
		public LetDeclContext letDecl() {
			return getRuleContext(LetDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public FnDeclContext fnDecl() {
			return getRuleContext(FnDeclContext.class,0);
		}
		public TaskDeclContext taskDecl() {
			return getRuleContext(TaskDeclContext.class,0);
		}
		public RunStmtContext runStmt() {
			return getRuleContext(RunStmtContext.class,0);
		}
		public ParallelStmtContext parallelStmt() {
			return getRuleContext(ParallelStmtContext.class,0);
		}
		public TopDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterTopDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitTopDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitTopDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopDeclContext topDecl() throws RecognitionException {
		TopDeclContext _localctx = new TopDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_topDecl);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				constDecl();
				}
				break;
			case LET:
			case MUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				letDecl();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				typeDecl();
				}
				break;
			case FN:
				enterOuterAlt(_localctx, 4);
				{
				setState(138);
				fnDecl();
				}
				break;
			case TASK:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				taskDecl();
				}
				break;
			case RUN:
				enterOuterAlt(_localctx, 6);
				{
				setState(140);
				runStmt();
				}
				break;
			case PARALLEL:
				enterOuterAlt(_localctx, 7);
				{
				setState(141);
				parallelStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstDeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(DfppParser.CONST, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EQ() { return getToken(DfppParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DfppParser.COLON, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterConstDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitConstDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitConstDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(CONST);
			setState(145);
			ident();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(146);
				match(COLON);
				setState(147);
				typeRef(0);
				}
			}

			setState(150);
			match(EQ);
			setState(151);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetDeclContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EQ() { return getToken(DfppParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LET() { return getToken(DfppParser.LET, 0); }
		public TerminalNode MUT() { return getToken(DfppParser.MUT, 0); }
		public TerminalNode COLON() { return getToken(DfppParser.COLON, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public LetDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterLetDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitLetDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitLetDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetDeclContext letDecl() throws RecognitionException {
		LetDeclContext _localctx = new LetDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_letDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_la = _input.LA(1);
			if ( !(_la==LET || _la==MUT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(154);
			ident();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(155);
				match(COLON);
				setState(156);
				typeRef(0);
				}
			}

			setState(159);
			match(EQ);
			setState(160);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(DfppParser.TYPE, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EQ() { return getToken(DfppParser.EQ, 0); }
		public SumTypeContext sumType() {
			return getRuleContext(SumTypeContext.class,0);
		}
		public TypeParamsDeclContext typeParamsDecl() {
			return getRuleContext(TypeParamsDeclContext.class,0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).enterTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DfppListener ) ((DfppListener)listener).exitTypeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DfppVisitor ) return ((DfppVisitor<? extends T>)visitor).visitTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(TYPE);
			setState(163);
			ident();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LT) {
				{
				setState(164);
				typeParamsDecl();
				}
			}

			setState(167);
			match(EQ);
			setState(168);
			sumType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
